@@ -5,7 +5,7 @@ ENUM_KEY_SPACE = '32'
 ENUM_KEY_PAGEUP = '33'
 ENUM_KEY_PAGEDOWN = '34'
 
-ENUM_KEY_MENU = '36'
+ENUM_KEY_HOME = '36'
 ENUM_KEY_LEFT = 37
 ENUM_KEY_UP = '38'
 ENUM_KEY_RIGHT = 39
